add_executable(is_palindrome_benchmark is_palindrome_benchmark.cc)
target_link_libraries(is_palindrome_benchmark is_palindrome)
target_link_libraries(is_palindrome_benchmark benchmark pthread)

add_executable(first_non_repeated_benchmark first_non_repeated_benchmark.cc)
target_link_libraries(first_non_repeated_benchmark benchmark pthread)

add_executable(are_anagram_benchmark are_anagram_benchmark.cc)
target_link_libraries(are_anagram_benchmark are_anagram)
target_link_libraries(are_anagram_benchmark benchmark pthread)

add_executable(fibonacci_benchmark fibonacci_benchmark.cc)
target_link_libraries(fibonacci_benchmark fibonacci)
target_link_libraries(fibonacci_benchmark benchmark pthread)

add_executable(baseball_game_benchmark baseball_game_benchmark.cc)
target_link_libraries(baseball_game_benchmark baseball_game)
target_link_libraries(baseball_game_benchmark benchmark pthread)

add_executable(fixed_size_map_benchmark fixed_size_map_benchmark.cc)
target_link_libraries(fixed_size_map_benchmark fixed_size_map)
target_link_libraries(fixed_size_map_benchmark benchmark pthread)
